tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2365: Operator '==' cannot be applied to types '符号' and '真假'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2365: Operator '!=' cannot be applied to types '数字' and '符号'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2365: Operator '===' cannot be applied to types '符号' and '数字'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2365: Operator '!==' cannot be applied to types '真假' and '符号'.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types '符号' and '真假'.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types '数字' and '符号'.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '符号' and '数字'.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types '真假' and '符号'.